unpackaged/main/default/objects/ETI_Inspection_Observation__c/ETI_Inspection_Observation__c.object-meta.xml
<CustomObject>
    <label>Inspection Observation</label>
    <nameField>
        <displayFormat>VIO-{00000}</displayFormat>
        <label>Inspection Observation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>