unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Aman_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Aman_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aman Receipt</label>
    <referenceTo>ETI_Inspection_Receipt__c</referenceTo>
    <relationshipLabel>Inspection Observations</relationshipLabel>
    <relationshipName>Inspection_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>