unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/AMAN_Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>AMAN_Receipt_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AMAN Receipt No</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>