unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Break_Inspector_Id__c.field-meta.xml
<CustomField>
    <fullName>Break_Inspector_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Break Inspector Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>