unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Break_Minor_Codes__c.field-meta.xml
<CustomField>
    <fullName>Break_Minor_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Break Minor Codes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>