unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>150</length>
    <type>Text</type>
</CustomField>