unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Horse_Power__c.field-meta.xml
<CustomField>
    <fullName>Horse_Power__c</fullName>
    <label>Horse Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>