unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Is_Break_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Break_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Break Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>