unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Year</label>
    <length>150</length>
    <type>Text</type>
</CustomField>