unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/No_Of_Seats__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Seats__c</fullName>
    <label>No Of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>