unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>