unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Color</label>
    <length>150</length>
    <type>Text</type>
</CustomField>