unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Make</label>
    <length>150</length>
    <type>Text</type>
</CustomField>