unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Model</label>
    <length>150</length>
    <type>Text</type>
</CustomField>