unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>