unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Visual_Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Visual_Inspector_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visual Inspector Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>