unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Visual_Major_Codes__c.field-meta.xml
<CustomField>
    <fullName>Visual_Major_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visual Major Codes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>