unpackaged/main/default/objects/ETI_Inspection_Observation__c/fields/Weight_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Weight_Loaded__c</fullName>
    <label>Weight Loaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>