unpackaged/main/default/objects/ETI_Inspection_Observation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AMAN_Receipt_No__c</columns>
    <columns>Visual_Major_Codes__c</columns>
    <columns>Visual_Minor_Codes__c</columns>
    <columns>Break_Inspector_Id__c</columns>
    <columns>Break_Inspector_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>